--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi[standard]
-pydantic
-sqlalchemy
-pydantic-settings
-passlib[bcrypt]
+fastapi[standard]==0.113.0
+pydantic==2.8.0
+sqlalchemy==2.0.41
+pydantic-settings==2.9.1
+passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
-python-multipart
-python-dotenv
-pyjwt
+python-multipart==0.0.20
+python-dotenv==1.1.0
+pyjwt==2.10.1
